# wechat_multi_client

./: Cargo.toml  config.toml
src/: main.rs
